sql/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> query
Rule 1     query -> select
Rule 2     query -> LP query RP
Rule 3     select -> SELECT list FROM table WHERE lst ORDER BY list
Rule 4     select -> SELECT list FROM table WHERE lst
Rule 5     select -> SELECT list FROM table ORDER BY list
Rule 6     select -> SELECT list FROM table
Rule 7     table -> NAME
Rule 8     table -> LP query RP
Rule 9     table -> NAME AS NAME
Rule 10    table -> table AS NAME
Rule 11    table -> table COMMA table
Rule 12    lst -> condition
Rule 13    lst -> condition AND condition
Rule 14    lst -> condition OR condition
Rule 15    lst -> NAME BETWEEN NUMBER AND NUMBER
Rule 16    lst -> NAME IN LP query RP
Rule 17    lst -> NAME < agg
Rule 18    lst -> NAME > agg
Rule 19    lst -> agg > NUMBER
Rule 20    lst -> NAME = agg
Rule 21    lst -> agg = NUMBER
Rule 22    lst -> agg < NUMBER
Rule 23    condition -> NAME > NUMBER
Rule 24    condition -> NAME > agg
Rule 25    condition -> NAME < NUMBER
Rule 26    condition -> NAME < agg
Rule 27    condition -> NAME = NUMBER
Rule 28    condition -> NAME = agg
Rule 29    condition -> NAME > NAME
Rule 30    condition -> NAME < NAME
Rule 31    condition -> NAME = NAME
Rule 32    condition -> list > list
Rule 33    condition -> list < list
Rule 34    condition -> list = list
Rule 35    condition -> list > NUMBER
Rule 36    condition -> list < NUMBER
Rule 37    condition -> list = NUMBER
Rule 38    agg -> SUM LP NAME RP
Rule 39    agg -> AVG LP NAME RP
Rule 40    agg -> COUNT LP NAME RP
Rule 41    agg -> MIN LP NAME RP
Rule 42    agg -> MAX LP NAME RP
Rule 43    agg -> COUNT LP * RP
Rule 44    list -> *
Rule 45    list -> NAME
Rule 46    list -> NAME DOT NAME
Rule 47    list -> list COMMA list
Rule 48    list -> list AND NAME
Rule 49    list -> list OR NAME
Rule 50    list -> agg

Terminals, with rules where they appear

*                    : 43 44
<                    : 17 22 25 26 30 33 36
=                    : 20 21 27 28 31 34 37
>                    : 18 19 23 24 29 32 35
AND                  : 13 15 48
AS                   : 9 10
AVG                  : 39
BETWEEN              : 15
BY                   : 3 5
COMMA                : 11 47
COUNT                : 40 43
DOT                  : 46
FROM                 : 3 4 5 6
IN                   : 16
LP                   : 2 8 16 38 39 40 41 42 43
MAX                  : 42
MIN                  : 41
NAME                 : 7 9 9 10 15 16 17 18 20 23 24 25 26 27 28 29 29 30 30 31 31 38 39 40 41 42 45 46 46 48 49
NUMBER               : 15 15 19 21 22 23 25 27 35 36 37
OR                   : 14 49
ORDER                : 3 5
RP                   : 2 8 16 38 39 40 41 42 43
SELECT               : 3 4 5 6
SUM                  : 38
WHERE                : 3 4
error                : 

Nonterminals, with rules where they appear

agg                  : 17 18 19 20 21 22 24 26 28 50
condition            : 12 13 13 14 14
list                 : 3 3 4 5 5 6 32 32 33 33 34 34 35 36 37 47 47 48 49
lst                  : 3 4
query                : 2 8 16 0
select               : 1
table                : 3 4 5 6 10 11 11

Parsing method: LALR

state 0

    (0) S' -> . query
    (1) query -> . select
    (2) query -> . LP query RP
    (3) select -> . SELECT list FROM table WHERE lst ORDER BY list
    (4) select -> . SELECT list FROM table WHERE lst
    (5) select -> . SELECT list FROM table ORDER BY list
    (6) select -> . SELECT list FROM table

    LP              shift and go to state 3
    SELECT          shift and go to state 4

    query                          shift and go to state 1
    select                         shift and go to state 2

state 1

    (0) S' -> query .



state 2

    (1) query -> select .

    $end            reduce using rule 1 (query -> select .)
    RP              reduce using rule 1 (query -> select .)


state 3

    (2) query -> LP . query RP
    (1) query -> . select
    (2) query -> . LP query RP
    (3) select -> . SELECT list FROM table WHERE lst ORDER BY list
    (4) select -> . SELECT list FROM table WHERE lst
    (5) select -> . SELECT list FROM table ORDER BY list
    (6) select -> . SELECT list FROM table

    LP              shift and go to state 3
    SELECT          shift and go to state 4

    query                          shift and go to state 5
    select                         shift and go to state 2

state 4

    (3) select -> SELECT . list FROM table WHERE lst ORDER BY list
    (4) select -> SELECT . list FROM table WHERE lst
    (5) select -> SELECT . list FROM table ORDER BY list
    (6) select -> SELECT . list FROM table
    (44) list -> . *
    (45) list -> . NAME
    (46) list -> . NAME DOT NAME
    (47) list -> . list COMMA list
    (48) list -> . list AND NAME
    (49) list -> . list OR NAME
    (50) list -> . agg
    (38) agg -> . SUM LP NAME RP
    (39) agg -> . AVG LP NAME RP
    (40) agg -> . COUNT LP NAME RP
    (41) agg -> . MIN LP NAME RP
    (42) agg -> . MAX LP NAME RP
    (43) agg -> . COUNT LP * RP

    *               shift and go to state 7
    NAME            shift and go to state 8
    SUM             shift and go to state 10
    AVG             shift and go to state 11
    COUNT           shift and go to state 12
    MIN             shift and go to state 13
    MAX             shift and go to state 14

    list                           shift and go to state 6
    agg                            shift and go to state 9

state 5

    (2) query -> LP query . RP

    RP              shift and go to state 15


state 6

    (3) select -> SELECT list . FROM table WHERE lst ORDER BY list
    (4) select -> SELECT list . FROM table WHERE lst
    (5) select -> SELECT list . FROM table ORDER BY list
    (6) select -> SELECT list . FROM table
    (47) list -> list . COMMA list
    (48) list -> list . AND NAME
    (49) list -> list . OR NAME

    FROM            shift and go to state 16
    COMMA           shift and go to state 17
    AND             shift and go to state 18
    OR              shift and go to state 19


state 7

    (44) list -> * .

    FROM            reduce using rule 44 (list -> * .)
    COMMA           reduce using rule 44 (list -> * .)
    AND             reduce using rule 44 (list -> * .)
    OR              reduce using rule 44 (list -> * .)
    >               reduce using rule 44 (list -> * .)
    <               reduce using rule 44 (list -> * .)
    =               reduce using rule 44 (list -> * .)
    $end            reduce using rule 44 (list -> * .)
    RP              reduce using rule 44 (list -> * .)
    ORDER           reduce using rule 44 (list -> * .)


state 8

    (45) list -> NAME .
    (46) list -> NAME . DOT NAME

    FROM            reduce using rule 45 (list -> NAME .)
    COMMA           reduce using rule 45 (list -> NAME .)
    AND             reduce using rule 45 (list -> NAME .)
    OR              reduce using rule 45 (list -> NAME .)
    >               reduce using rule 45 (list -> NAME .)
    <               reduce using rule 45 (list -> NAME .)
    =               reduce using rule 45 (list -> NAME .)
    $end            reduce using rule 45 (list -> NAME .)
    RP              reduce using rule 45 (list -> NAME .)
    ORDER           reduce using rule 45 (list -> NAME .)
    DOT             shift and go to state 20


state 9

    (50) list -> agg .

    FROM            reduce using rule 50 (list -> agg .)
    COMMA           reduce using rule 50 (list -> agg .)
    AND             reduce using rule 50 (list -> agg .)
    OR              reduce using rule 50 (list -> agg .)
    >               reduce using rule 50 (list -> agg .)
    <               reduce using rule 50 (list -> agg .)
    =               reduce using rule 50 (list -> agg .)
    $end            reduce using rule 50 (list -> agg .)
    RP              reduce using rule 50 (list -> agg .)
    ORDER           reduce using rule 50 (list -> agg .)


state 10

    (38) agg -> SUM . LP NAME RP

    LP              shift and go to state 21


state 11

    (39) agg -> AVG . LP NAME RP

    LP              shift and go to state 22


state 12

    (40) agg -> COUNT . LP NAME RP
    (43) agg -> COUNT . LP * RP

    LP              shift and go to state 23


state 13

    (41) agg -> MIN . LP NAME RP

    LP              shift and go to state 24


state 14

    (42) agg -> MAX . LP NAME RP

    LP              shift and go to state 25


state 15

    (2) query -> LP query RP .

    $end            reduce using rule 2 (query -> LP query RP .)
    RP              reduce using rule 2 (query -> LP query RP .)


state 16

    (3) select -> SELECT list FROM . table WHERE lst ORDER BY list
    (4) select -> SELECT list FROM . table WHERE lst
    (5) select -> SELECT list FROM . table ORDER BY list
    (6) select -> SELECT list FROM . table
    (7) table -> . NAME
    (8) table -> . LP query RP
    (9) table -> . NAME AS NAME
    (10) table -> . table AS NAME
    (11) table -> . table COMMA table

    NAME            shift and go to state 27
    LP              shift and go to state 28

    table                          shift and go to state 26

state 17

    (47) list -> list COMMA . list
    (44) list -> . *
    (45) list -> . NAME
    (46) list -> . NAME DOT NAME
    (47) list -> . list COMMA list
    (48) list -> . list AND NAME
    (49) list -> . list OR NAME
    (50) list -> . agg
    (38) agg -> . SUM LP NAME RP
    (39) agg -> . AVG LP NAME RP
    (40) agg -> . COUNT LP NAME RP
    (41) agg -> . MIN LP NAME RP
    (42) agg -> . MAX LP NAME RP
    (43) agg -> . COUNT LP * RP

    *               shift and go to state 7
    NAME            shift and go to state 8
    SUM             shift and go to state 10
    AVG             shift and go to state 11
    COUNT           shift and go to state 12
    MIN             shift and go to state 13
    MAX             shift and go to state 14

    list                           shift and go to state 29
    agg                            shift and go to state 9

state 18

    (48) list -> list AND . NAME

    NAME            shift and go to state 30


state 19

    (49) list -> list OR . NAME

    NAME            shift and go to state 31


state 20

    (46) list -> NAME DOT . NAME

    NAME            shift and go to state 32


state 21

    (38) agg -> SUM LP . NAME RP

    NAME            shift and go to state 33


state 22

    (39) agg -> AVG LP . NAME RP

    NAME            shift and go to state 34


state 23

    (40) agg -> COUNT LP . NAME RP
    (43) agg -> COUNT LP . * RP

    NAME            shift and go to state 35
    *               shift and go to state 36


state 24

    (41) agg -> MIN LP . NAME RP

    NAME            shift and go to state 37


state 25

    (42) agg -> MAX LP . NAME RP

    NAME            shift and go to state 38


state 26

    (3) select -> SELECT list FROM table . WHERE lst ORDER BY list
    (4) select -> SELECT list FROM table . WHERE lst
    (5) select -> SELECT list FROM table . ORDER BY list
    (6) select -> SELECT list FROM table .
    (10) table -> table . AS NAME
    (11) table -> table . COMMA table

    WHERE           shift and go to state 39
    ORDER           shift and go to state 40
    $end            reduce using rule 6 (select -> SELECT list FROM table .)
    RP              reduce using rule 6 (select -> SELECT list FROM table .)
    AS              shift and go to state 41
    COMMA           shift and go to state 42


state 27

    (7) table -> NAME .
    (9) table -> NAME . AS NAME

  ! shift/reduce conflict for AS resolved as shift
    WHERE           reduce using rule 7 (table -> NAME .)
    ORDER           reduce using rule 7 (table -> NAME .)
    COMMA           reduce using rule 7 (table -> NAME .)
    $end            reduce using rule 7 (table -> NAME .)
    RP              reduce using rule 7 (table -> NAME .)
    AS              shift and go to state 43

  ! AS              [ reduce using rule 7 (table -> NAME .) ]


state 28

    (8) table -> LP . query RP
    (1) query -> . select
    (2) query -> . LP query RP
    (3) select -> . SELECT list FROM table WHERE lst ORDER BY list
    (4) select -> . SELECT list FROM table WHERE lst
    (5) select -> . SELECT list FROM table ORDER BY list
    (6) select -> . SELECT list FROM table

    LP              shift and go to state 3
    SELECT          shift and go to state 4

    query                          shift and go to state 44
    select                         shift and go to state 2

state 29

    (47) list -> list COMMA list .
    (47) list -> list . COMMA list
    (48) list -> list . AND NAME
    (49) list -> list . OR NAME

  ! shift/reduce conflict for COMMA resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    FROM            reduce using rule 47 (list -> list COMMA list .)
    >               reduce using rule 47 (list -> list COMMA list .)
    <               reduce using rule 47 (list -> list COMMA list .)
    =               reduce using rule 47 (list -> list COMMA list .)
    $end            reduce using rule 47 (list -> list COMMA list .)
    RP              reduce using rule 47 (list -> list COMMA list .)
    ORDER           reduce using rule 47 (list -> list COMMA list .)
    COMMA           shift and go to state 17
    AND             shift and go to state 18
    OR              shift and go to state 19

  ! COMMA           [ reduce using rule 47 (list -> list COMMA list .) ]
  ! AND             [ reduce using rule 47 (list -> list COMMA list .) ]
  ! OR              [ reduce using rule 47 (list -> list COMMA list .) ]


state 30

    (48) list -> list AND NAME .

    FROM            reduce using rule 48 (list -> list AND NAME .)
    COMMA           reduce using rule 48 (list -> list AND NAME .)
    AND             reduce using rule 48 (list -> list AND NAME .)
    OR              reduce using rule 48 (list -> list AND NAME .)
    >               reduce using rule 48 (list -> list AND NAME .)
    <               reduce using rule 48 (list -> list AND NAME .)
    =               reduce using rule 48 (list -> list AND NAME .)
    $end            reduce using rule 48 (list -> list AND NAME .)
    RP              reduce using rule 48 (list -> list AND NAME .)
    ORDER           reduce using rule 48 (list -> list AND NAME .)


state 31

    (49) list -> list OR NAME .

    FROM            reduce using rule 49 (list -> list OR NAME .)
    COMMA           reduce using rule 49 (list -> list OR NAME .)
    AND             reduce using rule 49 (list -> list OR NAME .)
    OR              reduce using rule 49 (list -> list OR NAME .)
    >               reduce using rule 49 (list -> list OR NAME .)
    <               reduce using rule 49 (list -> list OR NAME .)
    =               reduce using rule 49 (list -> list OR NAME .)
    $end            reduce using rule 49 (list -> list OR NAME .)
    RP              reduce using rule 49 (list -> list OR NAME .)
    ORDER           reduce using rule 49 (list -> list OR NAME .)


state 32

    (46) list -> NAME DOT NAME .

    FROM            reduce using rule 46 (list -> NAME DOT NAME .)
    COMMA           reduce using rule 46 (list -> NAME DOT NAME .)
    AND             reduce using rule 46 (list -> NAME DOT NAME .)
    OR              reduce using rule 46 (list -> NAME DOT NAME .)
    >               reduce using rule 46 (list -> NAME DOT NAME .)
    <               reduce using rule 46 (list -> NAME DOT NAME .)
    =               reduce using rule 46 (list -> NAME DOT NAME .)
    $end            reduce using rule 46 (list -> NAME DOT NAME .)
    RP              reduce using rule 46 (list -> NAME DOT NAME .)
    ORDER           reduce using rule 46 (list -> NAME DOT NAME .)


state 33

    (38) agg -> SUM LP NAME . RP

    RP              shift and go to state 45


state 34

    (39) agg -> AVG LP NAME . RP

    RP              shift and go to state 46


state 35

    (40) agg -> COUNT LP NAME . RP

    RP              shift and go to state 47


state 36

    (43) agg -> COUNT LP * . RP

    RP              shift and go to state 48


state 37

    (41) agg -> MIN LP NAME . RP

    RP              shift and go to state 49


state 38

    (42) agg -> MAX LP NAME . RP

    RP              shift and go to state 50


state 39

    (3) select -> SELECT list FROM table WHERE . lst ORDER BY list
    (4) select -> SELECT list FROM table WHERE . lst
    (12) lst -> . condition
    (13) lst -> . condition AND condition
    (14) lst -> . condition OR condition
    (15) lst -> . NAME BETWEEN NUMBER AND NUMBER
    (16) lst -> . NAME IN LP query RP
    (17) lst -> . NAME < agg
    (18) lst -> . NAME > agg
    (19) lst -> . agg > NUMBER
    (20) lst -> . NAME = agg
    (21) lst -> . agg = NUMBER
    (22) lst -> . agg < NUMBER
    (23) condition -> . NAME > NUMBER
    (24) condition -> . NAME > agg
    (25) condition -> . NAME < NUMBER
    (26) condition -> . NAME < agg
    (27) condition -> . NAME = NUMBER
    (28) condition -> . NAME = agg
    (29) condition -> . NAME > NAME
    (30) condition -> . NAME < NAME
    (31) condition -> . NAME = NAME
    (32) condition -> . list > list
    (33) condition -> . list < list
    (34) condition -> . list = list
    (35) condition -> . list > NUMBER
    (36) condition -> . list < NUMBER
    (37) condition -> . list = NUMBER
    (38) agg -> . SUM LP NAME RP
    (39) agg -> . AVG LP NAME RP
    (40) agg -> . COUNT LP NAME RP
    (41) agg -> . MIN LP NAME RP
    (42) agg -> . MAX LP NAME RP
    (43) agg -> . COUNT LP * RP
    (44) list -> . *
    (45) list -> . NAME
    (46) list -> . NAME DOT NAME
    (47) list -> . list COMMA list
    (48) list -> . list AND NAME
    (49) list -> . list OR NAME
    (50) list -> . agg

    NAME            shift and go to state 54
    SUM             shift and go to state 10
    AVG             shift and go to state 11
    COUNT           shift and go to state 12
    MIN             shift and go to state 13
    MAX             shift and go to state 14
    *               shift and go to state 7

    list                           shift and go to state 51
    lst                            shift and go to state 52
    condition                      shift and go to state 53
    agg                            shift and go to state 55

state 40

    (5) select -> SELECT list FROM table ORDER . BY list

    BY              shift and go to state 56


state 41

    (10) table -> table AS . NAME

    NAME            shift and go to state 57


state 42

    (11) table -> table COMMA . table
    (7) table -> . NAME
    (8) table -> . LP query RP
    (9) table -> . NAME AS NAME
    (10) table -> . table AS NAME
    (11) table -> . table COMMA table

    NAME            shift and go to state 27
    LP              shift and go to state 28

    table                          shift and go to state 58

state 43

    (9) table -> NAME AS . NAME

    NAME            shift and go to state 59


state 44

    (8) table -> LP query . RP

    RP              shift and go to state 60


state 45

    (38) agg -> SUM LP NAME RP .

    FROM            reduce using rule 38 (agg -> SUM LP NAME RP .)
    COMMA           reduce using rule 38 (agg -> SUM LP NAME RP .)
    AND             reduce using rule 38 (agg -> SUM LP NAME RP .)
    OR              reduce using rule 38 (agg -> SUM LP NAME RP .)
    >               reduce using rule 38 (agg -> SUM LP NAME RP .)
    <               reduce using rule 38 (agg -> SUM LP NAME RP .)
    =               reduce using rule 38 (agg -> SUM LP NAME RP .)
    $end            reduce using rule 38 (agg -> SUM LP NAME RP .)
    RP              reduce using rule 38 (agg -> SUM LP NAME RP .)
    ORDER           reduce using rule 38 (agg -> SUM LP NAME RP .)


state 46

    (39) agg -> AVG LP NAME RP .

    FROM            reduce using rule 39 (agg -> AVG LP NAME RP .)
    COMMA           reduce using rule 39 (agg -> AVG LP NAME RP .)
    AND             reduce using rule 39 (agg -> AVG LP NAME RP .)
    OR              reduce using rule 39 (agg -> AVG LP NAME RP .)
    >               reduce using rule 39 (agg -> AVG LP NAME RP .)
    <               reduce using rule 39 (agg -> AVG LP NAME RP .)
    =               reduce using rule 39 (agg -> AVG LP NAME RP .)
    $end            reduce using rule 39 (agg -> AVG LP NAME RP .)
    RP              reduce using rule 39 (agg -> AVG LP NAME RP .)
    ORDER           reduce using rule 39 (agg -> AVG LP NAME RP .)


state 47

    (40) agg -> COUNT LP NAME RP .

    FROM            reduce using rule 40 (agg -> COUNT LP NAME RP .)
    COMMA           reduce using rule 40 (agg -> COUNT LP NAME RP .)
    AND             reduce using rule 40 (agg -> COUNT LP NAME RP .)
    OR              reduce using rule 40 (agg -> COUNT LP NAME RP .)
    >               reduce using rule 40 (agg -> COUNT LP NAME RP .)
    <               reduce using rule 40 (agg -> COUNT LP NAME RP .)
    =               reduce using rule 40 (agg -> COUNT LP NAME RP .)
    $end            reduce using rule 40 (agg -> COUNT LP NAME RP .)
    RP              reduce using rule 40 (agg -> COUNT LP NAME RP .)
    ORDER           reduce using rule 40 (agg -> COUNT LP NAME RP .)


state 48

    (43) agg -> COUNT LP * RP .

    FROM            reduce using rule 43 (agg -> COUNT LP * RP .)
    COMMA           reduce using rule 43 (agg -> COUNT LP * RP .)
    AND             reduce using rule 43 (agg -> COUNT LP * RP .)
    OR              reduce using rule 43 (agg -> COUNT LP * RP .)
    >               reduce using rule 43 (agg -> COUNT LP * RP .)
    <               reduce using rule 43 (agg -> COUNT LP * RP .)
    =               reduce using rule 43 (agg -> COUNT LP * RP .)
    $end            reduce using rule 43 (agg -> COUNT LP * RP .)
    RP              reduce using rule 43 (agg -> COUNT LP * RP .)
    ORDER           reduce using rule 43 (agg -> COUNT LP * RP .)


state 49

    (41) agg -> MIN LP NAME RP .

    FROM            reduce using rule 41 (agg -> MIN LP NAME RP .)
    COMMA           reduce using rule 41 (agg -> MIN LP NAME RP .)
    AND             reduce using rule 41 (agg -> MIN LP NAME RP .)
    OR              reduce using rule 41 (agg -> MIN LP NAME RP .)
    >               reduce using rule 41 (agg -> MIN LP NAME RP .)
    <               reduce using rule 41 (agg -> MIN LP NAME RP .)
    =               reduce using rule 41 (agg -> MIN LP NAME RP .)
    $end            reduce using rule 41 (agg -> MIN LP NAME RP .)
    RP              reduce using rule 41 (agg -> MIN LP NAME RP .)
    ORDER           reduce using rule 41 (agg -> MIN LP NAME RP .)


state 50

    (42) agg -> MAX LP NAME RP .

    FROM            reduce using rule 42 (agg -> MAX LP NAME RP .)
    COMMA           reduce using rule 42 (agg -> MAX LP NAME RP .)
    AND             reduce using rule 42 (agg -> MAX LP NAME RP .)
    OR              reduce using rule 42 (agg -> MAX LP NAME RP .)
    >               reduce using rule 42 (agg -> MAX LP NAME RP .)
    <               reduce using rule 42 (agg -> MAX LP NAME RP .)
    =               reduce using rule 42 (agg -> MAX LP NAME RP .)
    $end            reduce using rule 42 (agg -> MAX LP NAME RP .)
    RP              reduce using rule 42 (agg -> MAX LP NAME RP .)
    ORDER           reduce using rule 42 (agg -> MAX LP NAME RP .)


state 51

    (32) condition -> list . > list
    (33) condition -> list . < list
    (34) condition -> list . = list
    (35) condition -> list . > NUMBER
    (36) condition -> list . < NUMBER
    (37) condition -> list . = NUMBER
    (47) list -> list . COMMA list
    (48) list -> list . AND NAME
    (49) list -> list . OR NAME

    >               shift and go to state 61
    <               shift and go to state 62
    =               shift and go to state 63
    COMMA           shift and go to state 17
    AND             shift and go to state 18
    OR              shift and go to state 19


state 52

    (3) select -> SELECT list FROM table WHERE lst . ORDER BY list
    (4) select -> SELECT list FROM table WHERE lst .

    ORDER           shift and go to state 64
    $end            reduce using rule 4 (select -> SELECT list FROM table WHERE lst .)
    RP              reduce using rule 4 (select -> SELECT list FROM table WHERE lst .)


state 53

    (12) lst -> condition .
    (13) lst -> condition . AND condition
    (14) lst -> condition . OR condition

    ORDER           reduce using rule 12 (lst -> condition .)
    $end            reduce using rule 12 (lst -> condition .)
    RP              reduce using rule 12 (lst -> condition .)
    AND             shift and go to state 65
    OR              shift and go to state 66


state 54

    (15) lst -> NAME . BETWEEN NUMBER AND NUMBER
    (16) lst -> NAME . IN LP query RP
    (17) lst -> NAME . < agg
    (18) lst -> NAME . > agg
    (20) lst -> NAME . = agg
    (23) condition -> NAME . > NUMBER
    (24) condition -> NAME . > agg
    (25) condition -> NAME . < NUMBER
    (26) condition -> NAME . < agg
    (27) condition -> NAME . = NUMBER
    (28) condition -> NAME . = agg
    (29) condition -> NAME . > NAME
    (30) condition -> NAME . < NAME
    (31) condition -> NAME . = NAME
    (45) list -> NAME .
    (46) list -> NAME . DOT NAME

  ! shift/reduce conflict for > resolved as shift
  ! shift/reduce conflict for < resolved as shift
  ! shift/reduce conflict for = resolved as shift
    BETWEEN         shift and go to state 67
    IN              shift and go to state 68
    <               shift and go to state 69
    >               shift and go to state 70
    =               shift and go to state 71
    COMMA           reduce using rule 45 (list -> NAME .)
    AND             reduce using rule 45 (list -> NAME .)
    OR              reduce using rule 45 (list -> NAME .)
    DOT             shift and go to state 20

  ! >               [ reduce using rule 45 (list -> NAME .) ]
  ! <               [ reduce using rule 45 (list -> NAME .) ]
  ! =               [ reduce using rule 45 (list -> NAME .) ]


state 55

    (19) lst -> agg . > NUMBER
    (21) lst -> agg . = NUMBER
    (22) lst -> agg . < NUMBER
    (50) list -> agg .

  ! shift/reduce conflict for > resolved as shift
  ! shift/reduce conflict for < resolved as shift
  ! shift/reduce conflict for = resolved as shift
    >               shift and go to state 72
    =               shift and go to state 73
    <               shift and go to state 74
    COMMA           reduce using rule 50 (list -> agg .)
    AND             reduce using rule 50 (list -> agg .)
    OR              reduce using rule 50 (list -> agg .)

  ! >               [ reduce using rule 50 (list -> agg .) ]
  ! <               [ reduce using rule 50 (list -> agg .) ]
  ! =               [ reduce using rule 50 (list -> agg .) ]


state 56

    (5) select -> SELECT list FROM table ORDER BY . list
    (44) list -> . *
    (45) list -> . NAME
    (46) list -> . NAME DOT NAME
    (47) list -> . list COMMA list
    (48) list -> . list AND NAME
    (49) list -> . list OR NAME
    (50) list -> . agg
    (38) agg -> . SUM LP NAME RP
    (39) agg -> . AVG LP NAME RP
    (40) agg -> . COUNT LP NAME RP
    (41) agg -> . MIN LP NAME RP
    (42) agg -> . MAX LP NAME RP
    (43) agg -> . COUNT LP * RP
